--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,5 +7,5 @@
 .main {
   margin: -45px 0 0 0;
   height: 250px;
-  background-image: url('ct_002.jpg');
+  background-image: url('Abstract_002.jpg');
 }
