--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,9 @@
-<app-top-books
-  *ngFor=" let book of books"
-  [book]="book"
-></app-top-books>
+<div align="center">
+  TOP 5 BOOKS
+  <br>
+  <app-top-books
+    *ngFor=" let book of books"
+    [book]="book"
+  ></app-top-books>
+
+</div>
