--- a/src/app/top-books/top-books.component.html
+++ b/src/app/top-books/top-books.component.html
@@ -1,9 +1,16 @@
-<div class="book">
-  <span routerLink='/book/{{id}}'>{{title}}</span>
+<div class="book" routerLink='/book/{{id}}'>
+  <span class="title">
+    {{title}}
+  </span>
+  <br>
   {{type_of_book}}
+  <br>
+
+  <img src=" ..{{image}}" alt="">
 
   <div class="stars">
-    {{avgStar}} STARS {{countOfVotes}} votes
+    {{avgStar}} STARS
+    <br>
     <fieldset class="rating">
       <input type="radio" id="star5" name="rating" value="5"/>
       <label class="full" for="star5" title="Awesome - 5 stars"></label>
@@ -26,5 +33,6 @@
       <input type="radio" id="starhalf" name="rating" value="half"/>
       <label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
     </fieldset>
+    {{countOfVotes}} vote(s)
   </div>
 </div>
