--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -8,12 +8,12 @@
   position: relative;
   width: 75%;
   float: left;
-  background-color: greenyellow;
+  background-color: rgba(106, 164, 35, 0.55);
 }
 
 .statistic {
   position: relative;
   width: 25%;
-  background-color: #FFED85;
+  background-color: rgba(255, 237, 133, 0.65);
   float: left;
 }
