--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,3 +4,9 @@
 .logged {
   display: none;
 }
+.books-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
