--- a/src/app/top-books/top-books.component.html
+++ b/src/app/top-books/top-books.component.html
@@ -5,9 +5,7 @@
   <br>
   {{type_of_book}}
   <br>
-
-  <img src=" ..{{image}}" alt="">
-
+  <img src="{{image}}" alt="{{title}}" class="image">
   <div class="stars">
     {{avgStar}} STARS
     <br>
