--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -1,19 +1,25 @@
 .main {
   margin: auto;
   display: block;
-  width: 90%;
+  width: 75%;
 }
 
 .basicInfo {
   position: relative;
   width: 75%;
   float: left;
-  background-color: rgba(106, 164, 35, 0.55);
+  background-color: rgba(106, 164, 35, 0.05);
 }
 
 .statistic {
   position: relative;
   width: 25%;
-  background-color: rgba(255, 237, 133, 0.65);
+  background-color: rgba(255, 237, 133, 0.1);
   float: left;
+}
+
+.image {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
