--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -1,8 +1,8 @@
 <div class="comment">
-    {{commentText}}
-
-  <div class="date">
-    {{date}}
+  <div class="info">
+    <span class="user">{{user}}</span>
+    <span class="date">{{date}}</span>
   </div>
+  {{commentText}}
 </div>
 
