--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,9 @@
 .loginButtons {
-  font-size: 40px;
+  font-size: 20px;
+  cursor: pointer;
+  margin-right: 20px;
+  float: right;
+  color: #575658;
 }
 
 .logged {
@@ -8,8 +12,17 @@
 
 .main {
   margin: -45px 0 0 0;
-  height: 250px;
-  background-image: url('Abstract_002.jpg');
+  height: 150px;
+  color: #838787;
+  /*background-color: #e9e9e9;*/
+  border-bottom: 2px solid #adacb4;
+  background: url('header11.jpg') no-repeat;
+  background-size: 100%;
+}
+
+.mainText {
+  padding-top: 30px;
+  padding-left: 20px;
 }
 
 .loginForm {
@@ -24,7 +37,12 @@
 
 .error {
   position: relative;
-  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.44) 0%, rgba(0, 0, 0, 0.24) 35%, rgba(0, 0, 0, 0) 100%);
+  background: radial-gradient(ellipse at center, rgb(199, 0, 0) 0%, rgba(199, 0, 0, 0.46) 35%, rgba(0, 0, 0, 0) 100%);
   height: 40px;
   width: 100%;
+}
+
+.container {
+  width: 75%;
+  color: white;
 }
