--- a/src/app/comment/comment.component.css
+++ b/src/app/comment/comment.component.css
@@ -1,10 +1,22 @@
 .comment {
-  height: 70px;
-  display: block;
+  /*height: 70px;*/
+  width: 100%;
+  display: inline-block;
   background-color: rgba(250, 235, 215, 0.5);
-  margin: 20px
+  margin-top: 20px;
+  padding: 0 10px;
 }
 
+.info {
+  margin-bottom: 5px;
+}
+
+.user {
+  font-size: 17px;
+  margin-right: 10px;
+  color: #325c97;
+}
 .date {
-  float: right;
+  font-size: 12px;
+  color: #9f9f9f;
 }
