--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #f7f7f7;
+}
+
+
+.container {
+  width: 75%;
+  background-color: white;
+}
