--- a/src/app/word-search/word-search.component.html
+++ b/src/app/word-search/word-search.component.html
@@ -1,5 +1,5 @@
 <div class="container" align="center">
-  Books by tag {{tag}}
+  Books by word {{word}}
   <br>
   <div class="books-wrapper">
     <app-books
