Add a lot off little fixes

--- a/src/app/all-books/all-books.component.html
+++ b/src/app/all-books/all-books.component.html
@@ -1,7 +1,7 @@
 <div class="container" align="center">
   <br>
   <div class="books-header-text">
-    <i class="fas fa-book"> Books by word "{{word}}" </i>
+    <i class="fas fa-book"> All the books what we have</i>
   </div>
   <br>
   <div class="books-wrapper">
