--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -7,7 +7,7 @@
   <br>
   <img src="{{image}}" alt="{{title}}" class="image"  routerLink='/book/{{id}}'>
   <div class="stars">
-    {{avgStar}} STARS
+    {{avgStar}} star
     <br>
     <fieldset class="rating">
       <input type="radio" id="star5" name="rating" value="5"/>
