--- a/src/app/tag-search/tag-search.component.html
+++ b/src/app/tag-search/tag-search.component.html
@@ -1,5 +1,8 @@
 <div class="container" align="center">
-  Books by tag {{tag}}
+  <br>
+  <div class="books-header-text">
+    <i class="fas fa-book"> Books by tag "{{tag}}" </i>
+  </div>
   <br>
   <div class="books-wrapper">
     <app-books
