--- a/src/app/top-books/top-books.component.html
+++ b/src/app/top-books/top-books.component.html
@@ -1,5 +1,8 @@
 <div class="container" align="center">
-  TOP 5 BOOKS
+  <br>
+  <div class="books-header-text">
+    <i class="fas fa-book"> TOP 5 BOOKS</i>
+  </div>
   <br>
   <div class="books-wrapper">
     <app-books
