--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,9 +20,17 @@
   background-size: 100%;
 }
 
+.fa-fort-awesome {
+  margin-left: 30px;
+  font-size: 25px;
+  color: #7f8081;
+  cursor: pointer;
+}
+
 .mainText {
   padding-top: 30px;
   padding-left: 20px;
+  cursor: pointer;
 }
 
 .loginForm {
@@ -37,9 +45,13 @@
 
 .error {
   position: relative;
-  background: radial-gradient(ellipse at center, rgb(199, 0, 0) 0%, rgba(199, 0, 0, 0.46) 35%, rgba(0, 0, 0, 0) 100%);
+  background-color: rgba(227, 118, 139, 0.59);
+  border: 2px solid red;
+  text-align: center;
+  font-size: 20px;
   height: 40px;
   width: 100%;
+  margin: 20px 0px;
 }
 
 .fullSearch{
