FILE UPLOAD WORKS !!!!!

--- a/src/app/upload-book/upload-book.component.html
+++ b/src/app/upload-book/upload-book.component.html
@@ -44,7 +44,7 @@
     <label>* Photo:</label>
     <br>
     <input type="file" required name="photo" ngModel #photo='ngModel'
-           (change)="handleFileInput($event.target.files)">
+           (change)="handleFileInput($event)">
     <br>
     <br>
 
